ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hue
  namespace: default
spec:
  rules:
  - host: hue.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: hue
          servicePort: 8888
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
spec:
  tls:
  - hosts: 
    - dashboard.kudoop.cn
    secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mapjob
  namespace: default
spec:
  rules:
  - host: mapjob.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: mapred-job
          servicePort: 19888
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ps
  namespace: default
spec:
  rules:
  - host: ps.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: yarn-ps
          servicePort: 8089
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: kube-system
spec:
  rules:
  - host: kibana.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: kube-system
spec:
  rules:
  - host: es.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: elasticsearch-logging
          servicePort: 9200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kudu
  namespace: default
spec:
  rules:
  - host: kudu.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: kudu
          servicePort: 8051
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka
  namespace: default
spec:
  rules:
  - host: kafka.kudoop.cn
    http:
      paths:
      - backend:
          serviceName: kafka-manager
          servicePort: 9000
